GUI-5183 Fix gen sub button cut off and profile loading icon not obvious issue

--- a/assets/newStylesheets/less/partials/modal.less
+++ b/assets/newStylesheets/less/partials/modal.less
@@ -1305,6 +1305,10 @@ html.microsoft {
     .modalBottom {
         .btn {
             .size(@width: 130px);
+
+            &.genSub {
+                .size(@width: 150px);
+            }
         }
     }
 }
@@ -1505,6 +1509,10 @@ html.microsoft {
 
         .loadingSection {
             display: block !important;
+        }
+
+        .bar {
+            opacity: 0.6;
         }
     }
 
